Switching the library to use TypeScript. Also added in some additional tests and extra functionality.

--- a/tests.html
+++ b/tests.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
         <script type="text/javascript" src="bower_components/threejs/build/three.js"></script>
         <script type="text/javascript" src="bower_components/qunit/qunit/qunit.js"></script>
-        <script type="text/javascript" src="additions.js"></script>
+        <script type="text/javascript" src="build/additions.js"></script>
         <script type="text/javascript" src="tests.js"></script>
         <link href="bower_components/qunit/qunit/qunit.css" rel="stylesheet" type="text/css" />
     </head>
